@@ -1,5 +1,9 @@
 2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* improve positioning: make parents and new siblings visible
+
+2013-01-02  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* fix assertion when undo states are incorrect because of
 	  insertions
 
